--- a/encode.html
+++ b/encode.html
@@ -1,3 +1,8 @@
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+<title>encoder</title>
+</head>
 <script>
 	var stringAsHtml = $(selector).val().Replace("\r\n", "<br />\r\n");
 	function reverseString(str) {
