--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 		<a href="https://www.youtube.com/channel/UC7Ay5Xr8FA1jG3vBNzkZpsA" target="_blank"><img src="img/icon/youtube.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://www.facebook.com/pdteggman" target="_blank"><img src="img/icon/facebook.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<p><a href="pascal"><img src="img/icon/pascal.Default" class="smicon" style="width:40px; vertical-align: middle"></a></p>
-		<hr>
+		<hr href="/encode.html">
 	</div>
 </body>
 </html>
