--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		background-attachment: fixed;
 		background-size: cover;
 	}
+	hr {
+		color: white
+	}
 	.center {
 		transform: translate(-50%, -50%);
 		background-color: #0a0f0f99;
