--- a/encode.html
+++ b/encode.html
@@ -4,6 +4,7 @@
 <title>encoder</title>
 </head>
 <script>
+	function reverseString(str) {
 		let newString = '';
 		for (let i = str.length - 1; i >= 0; i--) {
 			newString += str[i];
