--- a/index.html
+++ b/index.html
@@ -162,12 +162,15 @@
 	</div>
 	<div class="center">
 		<img class="avt" src="img/logo.png" style="width:280px">
-		<a href="phatsua"><hr></a>
+		<hr>
 		<a href="https://open.spotify.com/user/21bojxvkctpme32ypqokhnkoi" target="_blank"><img src="img/icon/spotify.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://steamcommunity.com/id/pdteggman" target="_blank"><img src="img/icon/steam.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://www.youtube.com/channel/UC7Ay5Xr8FA1jG3vBNzkZpsA" target="_blank"><img src="img/icon/youtube.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://www.facebook.com/pdteggman" target="_blank"><img src="img/icon/facebook.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<p><a href="pascal"><img src="img/icon/pascal.Default" class="smicon" style="width:40px; vertical-align: middle"></a></p>
+		<p>
+		<a href="pascal"><img src="img/icon/pascal.Default" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<a href="phatsua"><img src="img/icon/phatsua_avt_circle.png" class="smicon" style="width:40px; vertical-align: middle"></a>
+		</p>
 		<a href="encoder"><hr></a>
 	</div>
 </body>
