--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 		<a href="https://www.facebook.com/pdteggman" target="_blank"><img src="img/icon/facebook.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<br>
 		<a href="pascal"><img src="img/icon/pascal.Default" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<a href="phatsua"><img src="img/icon/phatsua_avt_circle.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="encoder"><hr></a>
 	</div>
 </body>
