--- a/phatsua.html
+++ b/phatsua.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" type="image/x-icon" href="img/icon/phatsua_avt_circle.png">
 <title>Phát sủa</title>
 <script>
