--- a/encoder.html
+++ b/encoder.html
@@ -1,7 +1,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
-<title>pdtegman - en/decoder</title>
+<title>pdteggman - en/decoder</title>
 </head>
 <script>
 	function reverseString(str) {
