--- a/phatsua.html
+++ b/phatsua.html
@@ -65,8 +65,8 @@ function playSound() {
 <body>
 	<div class="center">
 		<img class="phatsua_avt" src="img/phatsua_avt.png" style="width:300px">
-		<button class="bphatsua bhover" onclick="playSound()">Nghe Phát sủa 🐶</button>
-		<audio id="audio" src="audio/phatsua.mp3"></audio>
+		<button class="bphatsua bhover" onclick="playSound()"><audio id="audio" src="audio/phatsua.mp3">Nghe Phát sủa 🐶</audio></button>
+		<button class="bphatsua bhover" onclick="playSound()"><audio id="audio" src="audio/phat_im-gay.mp3">"I'm gay ~"</audio></button>
 	</div>
 </body>
 </html>
