--- a/phatsua.html
+++ b/phatsua.html
@@ -10,6 +10,11 @@ function playSound() {
 	audio.currentTime = 0;
 	audio.play();
 }
+function playSound2() {
+	var audio = document.getElementById("audio2");
+	audio.currentTime = 0;
+	audio.play();
+}
 </script>
 <style>
 	body {
@@ -65,8 +70,10 @@ function playSound() {
 <body>
 	<div class="center">
 		<img class="phatsua_avt" src="img/phatsua_avt.png" style="width:300px">
-		<button class="bphatsua bhover" onclick="playSound()"><audio id="audio" src="audio/phatsua.mp3">Nghe Phát sủa 🐶</audio></button>
-		<button class="bphatsua bhover" onclick="playSound()"><audio id="audio" src="audio/phat_im-gay.mp3">"I'm gay ~"</audio></button>
+		<audio id="audio" src="audio/phatsua.mp3"></audio>
+		<audio id="audio2" src="audio/phat_im-gay.mp3"></audio>
+		<button class="bphatsua bhover" onclick="playSound()">Nghe Phát sủa 🐶</button>
+		<button class="bphatsua bhover" onclick="playSound2()">"I'm gay ~"</button>
 	</div>
 </body>
 </html>
