--- a/encoder.html
+++ b/encoder.html
@@ -54,7 +54,7 @@
 <p><button onclick="cls()">Clear</button></p>
 <textarea id="inputbox" style="resize:none" rows="20" cols="100"></textarea>
 <p>
-<button onclick="encodeFunc()">Endode</button>
+<button onclick="encodeFunc()">Encode</button>
 <button onclick="decodeFunc()">Decode</button>
 </p>
 <h3>Output box</h3>
