--- a/encoder.html
+++ b/encoder.html
@@ -52,7 +52,7 @@
 </script>
 <h3>Input box</h3>
 <p><button onclick="cls()">Clear</button></p>
-<textarea id="inputbox" style="resize:none" rows="20" cols="100"></textarea>
+<textarea id="inputbox" spellcheck="false" style="resize:none" rows="20" cols="100"></textarea>
 <p>
 <button onclick="encodeFunc()">Encode</button>
 <button onclick="decodeFunc()">Decode</button>
