--- a/phatsua.html
+++ b/phatsua.html
@@ -37,19 +37,19 @@ function playSound2() {
 		top: 50%;
 	}
 	.bphatsua {
-		background-color: #4CAF50;
+		background-color: #FFA50099;
 		border: none;
+		border-radius: 12px;
 		color: white;
-		padding: 15px 32px;
+		padding: 20px;
 		text-align: center;
 		text-decoration: none;
 		display: inline-block;
-		font-size: 32px;
-		margin: 4px 2px;
+		font-size: 30px;
+		margin: 8px 2px;
 		cursor: pointer;
 	}
 	.bhover {
-		border-radius: 7%;
 		-moz-transition: all 0.1s ease-in;
 		-o-transition: all 0.1s ease-in;
 		-webkit-transition: all 0.2s ease-in;
