--- a/phatsua.html
+++ b/phatsua.html
@@ -17,6 +17,15 @@ function playSound2() {
 }
 </script>
 <style>
+	@font-face {
+		font-family: Quicksand;
+		src: url(font/Quicksand-Regular.ttf);
+	}
+	@font-face {
+		font-family: Quicksand;
+		src: url(font/Quicksand-Bold.ttf);
+		font-weight: bold;
+	}
 	body {
 		text-align: center;
 		color: white;
