--- a/phatsua.html
+++ b/phatsua.html
@@ -28,6 +28,7 @@ function playSound2() {
 	}
 	body {
 		text-align: center;
+		font-family: Quicksand;
 		color: white;
 		background: url('img/phatsua_bg.jpg');
 		background-repeat: no-repeat;
