--- a/encoder.html
+++ b/encoder.html
@@ -69,6 +69,10 @@
 		background-attachment: fixed;
 		background-size: cover;
 	}
+	h3 {
+		color: black;
+		font-size: 20px;
+	}
 	textarea {
 		background-color: #0a0f0f99;
 	}
