--- a/encoder.html
+++ b/encoder.html
@@ -77,6 +77,7 @@
 		background-color: #0a0f0f99;
 	}
 	button {
+		font-family: Quicksand;
 		background-color: #00008b;
 		border: none;
 		border-radius: 12px;
