--- a/phatsua.html
+++ b/phatsua.html
@@ -47,6 +47,7 @@ function playSound2() {
 		top: 50%;
 	}
 	.bphatsua {
+		font-family: Quicksand;
 		background-color: #FFA50099;
 		border: none;
 		border-radius: 12px;
