--- a/encoder.html
+++ b/encoder.html
@@ -70,7 +70,7 @@
 	textarea {
 		font-family: Quicksand;
 		color: white;
-		font-size: 20px
+		font-size: 20px;
 		background-color: #0a0f0f99;
 	}
 	button {
