--- a/encoder.html
+++ b/encoder.html
@@ -71,6 +71,7 @@
 		font-family: Quicksand;
 		color: white;
 		background-color: #0a0f0f99;
+		border-radius: 12px;
 	}
 	button {
 		font-family: Quicksand;
