--- a/encoder.html
+++ b/encoder.html
@@ -96,6 +96,6 @@
 <button onclick="decodeFunc()">Decode</button>
 </p>
 <h3>Output box</h3>
-<p><button onclick="copy()">Copy</button><span style="color: black" id="copyAlert"></span></p>
+<p><button onclick="copy()">Copy</button><span style="color: black; font-family: Quicksand" id="copyAlert"></span></p>
 <textarea readonly id="outputbox" style="resize:none" rows="20" cols="100"></textarea>
 </body>
