--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 		<br>
 		<a href="pascal"><img src="img/icon/pascal.Default" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="phatsua"><img src="img/icon/phatsua_avt_circle.png" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<a href="ic3"><img src="img/icon/ic3.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="encoder"><hr></a>
 	</div>
 </body>
