--- a/ic3.html
+++ b/ic3.html
@@ -163,12 +163,19 @@
 		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=08650717" target="_blank">Thường</a>
 		&nbsp;&nbsp;&nbsp;
 		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=10747869" target="_blank">Speedrun</a>
+		</p>
 		<hr>
 		<p class="prjtext"><a style="font-size: 180%; color: #ffffff">Thi thử 2</p>
 		<p>
 		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=51642333" target="_blank">Thường</a>
 		&nbsp;&nbsp;&nbsp;
 		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=36962269" target="_blank">Speedrun</a>
+		</p>
+		<hr>
+		<p class="prjtext"><a style="font-size: 180%; color: #ffffff">Thi thử 3</p>
+		<p>
+		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=52450365" target="_blank">Thường</a>
+		</p>
 	</div>
 </body>
 </html>
