--- a/ic3.html
+++ b/ic3.html
@@ -169,12 +169,17 @@
 		<p>
 		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=51642333" target="_blank">Thường</a>
 		&nbsp;&nbsp;&nbsp;
-		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=36962269" target="_blank">Speedrun</a>
+		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=42728509" target="_blank">Speedrun</a>
 		</p>
 		<hr>
 		<p class="prjtext"><a style="font-size: 180%; color: #ffffff">Thi thử 3</p>
 		<p>
-		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=52450365" target="_blank">Thường</a>
+		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=10222653" target="_blank">Thường</a>
+		</p>
+		<hr>
+		<p class="prjtext"><a style="font-size: 180%; color: #ffffff">Tổng</p>
+		<p>
+		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=52977725" target="_blank">3 thi thử</a>
 		</p>
 	</div>
 </body>
