--- a/ic3.html
+++ b/ic3.html
@@ -168,8 +168,7 @@
 		<p class="prjtext"><a style="font-size: 180%; color: #ffffff">Thi thử 2</p>
 		<p>
 		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=51642333" target="_blank">Thường</a>
-		&nbsp;&nbsp;&nbsp;
-		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=42728509" target="_blank">Speedrun</a>
+		
 		</p>
 		<hr>
 		<p class="prjtext"><a style="font-size: 180%; color: #ffffff">Thi thử 3</p>
@@ -180,6 +179,8 @@
 		<p class="prjtext"><a style="font-size: 180%; color: #ffffff">Tổng</p>
 		<p>
 		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=52977725" target="_blank">3 thi thử</a>
+		&nbsp;&nbsp;&nbsp;
+		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=18374717" target="_blank">2 ôn tập</a>
 		</p>
 	</div>
 </body>
