--- a/ic3.html
+++ b/ic3.html
@@ -168,7 +168,8 @@
 		<p class="prjtext"><a style="font-size: 180%; color: #ffffff">Thi thử 2</p>
 		<p>
 		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=51642333" target="_blank">Thường</a>
-		
+		&nbsp;&nbsp;&nbsp;
+		<a class="prjtext" style="font-size: 130%; color: #ffffff" href="https://quizizz.com/join?gc=42728509" target="_blank">Speedrun</a>
 		</p>
 		<hr>
 		<p class="prjtext"><a style="font-size: 180%; color: #ffffff">Thi thử 3</p>
