--- a/cmt8.html
+++ b/cmt8.html
@@ -5,13 +5,9 @@
 <link rel="shortcut icon" href="img/cmt8/icon.png">
 <title>KỶ NIỆM 77 NĂM CÁCH MẠNG THÁNG TÁM (19/8/1945 - 19/8/2022)</title>
 <style>
-	@font-face {
-		font-family: Quicksand;
-		src: url(font/Quicksand-Bold.ttf);
-	}
 	body {
 		text-align: center;
-		font-family: Quicksand;
+		font-family: Garamond;
 		color: white;
 		background: #ad0600;
 		background-repeat: no-repeat;
@@ -53,10 +49,10 @@
 	}
 	@keyframes glow {
 		from {
-			text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e6d700, 0 0 40px #e6d700, 0 0 50px #e6d700, 0 0 60px #e6d700, 0 0 70px #e6d700;
+			text-shadow: 0 0 10px #e6d700, 0 0 20px #e6d700, 0 0 30px #e6d700, 0 0 40px #e6d700, 0 0 50px #e6d700, 0 0 60px #e6d700, 0 0 70px #e6d700;
 		}
 		to {
-			text-shadow: 0 0 20px #fff, 0 0 30px #eaff00, 0 0 40px #eaff00, 0 0 50px #eaff00, 0 0 60px #eaff00, 0 0 70px #eaff00, 0 0 80px #eaff00;
+			text-shadow: 0 0 20px #eaff00, 0 0 30px #eaff00, 0 0 40px #eaff00, 0 0 50px #eaff00, 0 0 60px #eaff00, 0 0 70px #eaff00, 0 0 80px #eaff00;
 		}
 	}
 	.prjtext {
