--- a/phatsua.html
+++ b/phatsua.html
@@ -64,9 +64,9 @@
 <body>
 	<div class="center">
 		<img class="phatsua_avt" src="img/phatsua_avt.png" style="width:300px">
-		<button class="bphatsua bhover" onclick="location.href('/rick.mp4')">Nghe Phát sủa 🐶</button>
+		<button class="bphatsua bhover" onclick="window.open('/rick.mp4')">Nghe Phát sủa 🐶</button>
 		<br>
-		<button class="bphatsua bhover" onclick="location.href('/rick.mp4')">"I'm gay ~"</button>
+		<button class="bphatsua bhover" onclick="window.open('/rick.mp4')">"I'm gay ~"</button>
 	</div>
 </body>
 </html>
