--- a/index.html
+++ b/index.html
@@ -156,12 +156,15 @@
 		<hr>
 		<a href="https://open.spotify.com/user/21bojxvkctpme32ypqokhnkoi" target="_blank"><img src="img/icon/spotify.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://steamcommunity.com/id/pdteggman" target="_blank"><img src="img/icon/steam.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<a href="https://www.youtube.com/channel/UC7Ay5Xr8FA1jG3vBNzkZpsA" target="_blank"><img src="img/icon/youtube.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://www.facebook.com/pdteggman" target="_blank"><img src="img/icon/facebook.png" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<a href="https://twitter.com/piaw505" target="_blank"><img src="img/icon/twitter.png" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<hr>
+		<a href="https://www.tiktok.com/@piaw505" target="_blank"><img src="img/icon/tiktok.png" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<a href="https://www.reddit.com/user/piaw505" target="_blank"><img src="img/icon/reddit.png" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<a href="https://github.com/pdt1806" target="_blank"><img src="img/icon/github.png" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<a href="https://www.roblox.com/users/1738907150/profile" target="_blank"><img src="img/icon/roblox.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<br>
-		<a href="pascal"><img src="img/icon/pascal.Default" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="phatsua"><img src="img/icon/phatsua_avt_circle.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<a href="encoder"><hr></a>
 	</div>
 </body>
 </html>
