--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 		<a href="https://steamcommunity.com/id/pdteggman" target="_blank"><img src="img/icon/steam.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://www.facebook.com/pdteggman" target="_blank"><img src="img/icon/facebook.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://twitter.com/piaw505" target="_blank"><img src="img/icon/twitter.png" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<a href="https://www.instagram.com/piaw505/" target="_blank"><img src="img/icon/instagram.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<br>
 		<a href="https://www.tiktok.com/@piaw505" target="_blank"><img src="img/icon/tiktok.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://www.reddit.com/user/piaw505" target="_blank"><img src="img/icon/reddit.png" class="smicon" style="width:40px; vertical-align: middle"></a>
