--- a/encoder.html
+++ b/encoder.html
@@ -3,7 +3,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
 <title>pdteggman - en/decoder</title>
 </head>
-<script src="myScript.js"></script>
+<script src="script.js"></script>
 <style>
 	@font-face {
 		font-family: Quicksand;
