--- a/phatsua.html
+++ b/phatsua.html
@@ -4,79 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" type="image/x-icon" href="img/icon/phatsua_avt_circle.png">
 <title>Phát sủa</title>
-<script>
-function playSound() {
-	var audio = document.getElementById("audio");
-	audio.currentTime = 0;
-	audio.play();
-}
-function playSound2() {
-	var audio = document.getElementById("audio2");
-	audio.currentTime = 0;
-	audio.play();
-}
-function playSound3() {
-	var audio = document.getElementById("audio3");
-	audio.currentTime = 0;
-	audio.play();
-}
-</script>
-<style>
-	@font-face {
-		font-family: Quicksand;
-		src: url(font/Quicksand-Bold.ttf);
-	}
-	body {
-		text-align: center;
-		font-family: Quicksand;
-		color: white;
-		background: url('img/phatsua_bg.jpg');
-		background-repeat: no-repeat;
-		background-position: center;
-		background-attachment: fixed;
-		background-size: cover;
-	}
-	.center {
-		transform: translate(-50%, -50%);
-		background-color: #0a0f0f99;
-		text-align: center;
-		position: absolute;
-		border-radius: 7%;
-		padding: 40px;
-		left: 50%;
-		top: 50%;
-	}
-	.bphatsua {
-		font-family: Quicksand;
-		background-color: #FFA50099;
-		border: none;
-		border-radius: 12px;
-		color: white;
-		padding: 20px;
-		text-align: center;
-		text-decoration: none;
-		display: inline-block;
-		font-size: 30px;
-		margin: 8px 2px;
-		cursor: pointer;
-	}
-	.bhover {
-		-moz-transition: all 0.1s ease-in;
-		-o-transition: all 0.1s ease-in;
-		-webkit-transition: all 0.2s ease-in;
-		transition: all 0.1s ease-in;
-	}
-	.bhover:hover {
-		transition: all 0.2s ease-in;
-		transform: scale(1.1);
-	}
-	.phatsua_avt {
-		display: block;
-		padding-bottom: 10px;
-		margin-left: auto;
-		margin-right: auto;
-	}
-</style>
+<script src="=script.js"></script>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="center">
