--- a/404.html
+++ b/404.html
@@ -3,6 +3,8 @@
 <head>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
 <title>pdteggman - 404</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="script.js"></script>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
