--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@
 <head>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
 <title>pdteggman - 404</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="script.js"></script>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<div class="wrapper">
