--- a/phatsua.html
+++ b/phatsua.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" type="image/x-icon" href="img/icon/phatsua_avt_circle.png">
 <title>Phát sủa</title>
-<script src="script.js"></script>
+<script type="text/javascript" src="script.js"></script>
 <style>
 	@font-face {
 		font-family: Quicksand;
