--- a/encoder.html
+++ b/encoder.html
@@ -3,44 +3,8 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
 <title>pdteggman - en/decoder</title>
 </head>
-<script src="script.js"></script>
-<style>
-	@font-face {
-		font-family: Quicksand;
-		src: url(font/Quicksand-Bold.ttf);
-	}
-	body {
-		background: url('img/encoder_bg.jpg');
-		background-repeat: no-repeat;
-		background-position: center;
-		background-attachment: fixed;
-		background-size: cover;	
-	}
-	h3 {
-		font-family: Quicksand;
-		color: black;
-		font-size: 20px;
-	}
-	textarea {
-		font-family: Quicksand;
-		color: white;
-		background-color: #0a0f0f99;
-		border-radius: 12px;
-	}
-	button {
-		font-family: Quicksand;
-		color: white;
-		background-color: #00008b;
-		border: none;
-		border-radius: 12px;
-		padding: 8px;
-		text-align: center;
-		text-decoration: none;
-		display: inline-block;
-		font-size: 15px;
-		cursor: pointer;
-	}
-</style>
+<script type="text/javascript" src="script_encoder.js"></script>
+<link rel="stylesheet" type="text/css" href="style_encoder.css">
 <body>
 <h3>Input box</h3>
 <p><button onclick="cls()">Clear</button></p>
