--- a/404.html
+++ b/404.html
@@ -22,13 +22,13 @@
 			<div></div>
 		</div>
 	</div>
-	<span class="center">
-			<img src="img/wrong-place-hentai.jpg" style="width:250px">
-			<p style="font-size: 200%;">"wrong place, hentai."<p>
-			<hr>
-			<p style="font-size: 120%;"><a class="glow" href="/">Back :(</a></p>
-			<hr>
-		</span>
+	<div class="center">
+		<img src="img/wrong-place-hentai.jpg" style="width:250px">
+		<p style="font-size: 200%;">"wrong place, hentai."</p>
+		<hr>
+		<p style="font-size: 120%;"><a class="glow" href="/">Back :(</a></p>
+		<hr>
+	</div>
 
 </body>
 </html>
