--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<a href="https://steamcommunity.com/id/pdteggman" target="_blank"><img src="img/icon/steam.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://www.reddit.com/user/piaw505" target="_blank"><img src="img/icon/reddit.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://github.com/pdt1806" target="_blank"><img src="img/icon/github.png" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<a href="https://www.quora.com/profile/Ph%C3%BAc-in-Another-World" target="_blank"><img src="img/icon/quora.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<a href="https://www.roblox.com/users/1738907150/profile" target="_blank"><img src="img/icon/roblox.png" class="smicon" style="width:40px; vertical-align: middle"></a>
 		<hr>
 		<a href="phatsua"><img src="img/icon/phatsua_avt_circle.png" class="smicon" style="width:40px; vertical-align: middle"></a>
