--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 	<div class="center">
 		<img class="avt" src="img/logo.png" style="width:280px">
 		<hr>
-		<a href="https://open.spotify.com/user/21bojxvkctpme32ypqokhnkoi" target="_blank"><img src="img/icon/spotify.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<a href="https://www.facebook.com/pdteggman" target="_blank"><img src="img/icon/facebook.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<a href="https://www.tiktok.com/@piaw505" target="_blank"><img src="img/icon/tiktok.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<a href="https://twitter.com/piaw505" target="_blank"><img src="img/icon/twitter.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<a href="https://www.instagram.com/piaw505/" target="_blank"><img src="img/icon/instagram.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<a href="https://steamcommunity.com/id/pdteggman" target="_blank"><img src="img/icon/steam.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<a href="https://www.reddit.com/user/piaw505" target="_blank"><img src="img/icon/reddit.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<a href="https://github.com/pdt1806" target="_blank"><img src="img/icon/github.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<a href="https://www.quora.com/profile/Ph%C3%BAc-in-Another-World" target="_blank"><img src="img/icon/quora.png" class="smicon" style="width:40px; vertical-align: middle"></a>
-		<a href="https://www.roblox.com/users/1738907150/profile" target="_blank"><img src="img/icon/roblox.png" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<a href="https://open.spotify.com/user/21bojxvkctpme32ypqokhnkoi" target="_blank"><img src="img/icon/spotify.png" class="icon"></a>
+		<a href="https://www.facebook.com/pdteggman" target="_blank"><img src="img/icon/facebook.png" class="icon"></a>
+		<a href="https://www.tiktok.com/@piaw505" target="_blank"><img src="img/icon/tiktok.png" class="icon"></a>
+		<a href="https://twitter.com/piaw505" target="_blank"><img src="img/icon/twitter.png" class="icon"></a>
+		<a href="https://www.instagram.com/piaw505/" target="_blank"><img src="img/icon/instagram.png" class="icon"></a>
+		<a href="https://steamcommunity.com/id/pdteggman" target="_blank"><img src="img/icon/steam.png" class="icon"></a>
+		<a href="https://www.reddit.com/user/piaw505" target="_blank"><img src="img/icon/reddit.png" class="icon"></a>
+		<a href="https://github.com/pdt1806" target="_blank"><img src="img/icon/github.png" class="icon"></a>
+		<a href="https://www.quora.com/profile/Ph%C3%BAc-in-Another-World" target="_blank"><img src="img/icon/quora.png" class="icon"></a>
+		<a href="https://www.roblox.com/users/1738907150/profile" target="_blank"><img src="img/icon/roblox.png" class="icon"></a>
 		<hr>
-		<a href="phatsua"><img src="img/icon/phatsua_avt_circle.png" class="smicon" style="width:40px; vertical-align: middle"></a>
+		<a href="phatsua"><img src="img/icon/phatsua_avt_circle.png" class="icon"></a>
 	</div>
 </body>
 </html>
