--- a/encoder.html
+++ b/encoder.html
@@ -1,10 +1,10 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="img/icon/favicon.png">
 <title>pdteggman - en/decoder</title>
 </head>
-<script type="text/javascript" src="script_encoder.js"></script>
-<link rel="stylesheet" type="text/css" href="style_encoder.css">
+<script type="text/javascript" src="script/script_encoder.js"></script>
+<link rel="stylesheet" type="text/css" href="style/style_encoder.css">
 <body>
 <h3>Input box</h3>
 <p><button onclick="cls()">Clear</button></p>
