--- a/phatsua.html
+++ b/phatsua.html
@@ -4,8 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" type="image/x-icon" href="img/icon/phatsua_avt_circle.png">
 <title>Phát sủa</title>
-<script type="text/javascript" src="script_phatsua.js"></script>
-<link rel="stylesheet" type="text/css" href="style_phatsua.css">
+<script type="text/javascript" src="script/script_phatsua.js"></script>
+<link rel="stylesheet" type="text/css" href="style/style_phatsua.css">
 </head>
 <body>
 	<div class="center">
