mal & pixiv added + a little fixing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div>
 	</div>
 	<div class="center">
-		<img class="avt" src="img/logo.png" style="width:280px">
+		<img class="avt" src="img/logo.png">
 		<hr>
 		<a href="https://open.spotify.com/user/21bojxvkctpme32ypqokhnkoi" target="_blank"><img src="img/icon/spotify.png" class="icon"></a>
 		<a href="https://www.facebook.com/pdteggman" target="_blank"><img src="img/icon/facebook.png" class="icon"></a>
@@ -36,6 +36,8 @@
 		<a href="https://github.com/pdt1806" target="_blank"><img src="img/icon/github.png" class="icon"></a>
 		<a href="https://www.quora.com/profile/Ph%C3%BAc-in-Another-World" target="_blank"><img src="img/icon/quora.png" class="icon"></a>
 		<a href="https://www.roblox.com/users/1738907150/profile" target="_blank"><img src="img/icon/roblox.png" class="icon"></a>
+		<a href="https://myanimelist.net/profile/piaw505" target="_blank"><img src="img/icon/mal.png" class="icon"></a>
+		<a href="https://www.pixiv.net/en/users/66995888" target="_blank"><img src="img/icon/pixiv.png" class="icon"></a>
 		<hr>
 		<a href="phatsua"><img src="img/icon/phatsua_avt_circle.png" class="icon"></a>
 	</div>
