--- a/phatsua.html
+++ b/phatsua.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="center">
-		<img class="phatsua_avt" src="img/phatsua_avt.png" style="width:300px">
+		<img class="phatsua_avt" src="img/phatsua_avt.png">
 		<audio id="audio" src="audio/phatsua.mp3"></audio>
 		<audio id="audio2" src="audio/phat_im-gay.mp3"></audio>
 		<audio id="audio3" src="audio/phatsua2.mp3"></audio>
