--- a/phatsua.html
+++ b/phatsua.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" type="image/x-icon" href="img/icon/phatsua_avt_circle.png">
+<link rel="shortcut icon" type="image/x-icon" href="img/phatsua/phatsua_avt_circle.png">
 <title>Phát sủa</title>
 <script type="text/javascript" src="script/script_phatsua.js"></script>
 <link rel="stylesheet" type="text/css" href="style/style_phatsua.css">
 </head>
 <body>
 	<div class="center">
-		<img class="phatsua_avt" src="img/phatsua_avt.png">
+		<img class="phatsua_avt" src="img/phatsua/phatsua_avt.png">
 		<audio id="audio" src="audio/phatsua.mp3"></audio>
 		<audio id="audio2" src="audio/phat_im-gay.mp3"></audio>
 		<audio id="audio3" src="audio/phatsua2.mp3"></audio>
