--- a/encoder.html
+++ b/encoder.html
@@ -8,7 +8,7 @@
 <body>
 <div>
 <div style="display: inline-block;">
-<h3>Input box</h3>
+<h3>Input</h3>
 <p>
 <button class="a" onclick="cls()">Clear</button>
 <button class="b" onclick="encodeFunc()">Encode</button>
@@ -17,7 +17,7 @@
 <textarea id="inputbox" spellcheck="false" rows="20" cols="80"></textarea>
 </div>
 <div style="display: inline-block;">
-<h3>Output box</h3>
+<h3>Output</h3>
 <p><button class="a" onclick="copy()">Copy</button><span style="color: black; font-family: Quicksand" id="copyAlert"></span></p>
 <textarea readonly id="outputbox" rows="20" cols="80"></textarea>
 </div>
