Fix social preview image problem

--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
     <link rel="stylesheet" href="/src/App.css" />
     <link rel="icon" type="image/svg+xml" href="/icon/webIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta data-rh="true" property="og:type" content="article" />
-    <meta data-rh="true" property="og:title" content="This is Benny Nguyen" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="This is Benny Nguyen" />
     <meta
-      data-rh="true"
       property="og:description"
       content="A Front-end developer who enjoys and wants to know more about programming."
     />
-    <meta data-rh="true" property="og:url" content="https://bennynguyen.us" />
+    <meta property="og:url" content="https://bennynguyen.us" />
     <meta
-      data-rh="true"
       property="og:image"
-      content="/images/webThumbnail.png"
+      content="https://bennynguyen.us/images/webThumbnail.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@piaw505" />
     <meta name="twitter:creator" content="@piaw505" />
-    <meta name="twitter:creater:id" content="piaw505" />
     <meta name="twitter:title" content="This is Benny Nguyen" />
     <meta
       name="twitter:description"
       content="A Front-end developer who enjoys and wants to know more about programming."
     />
-    <meta name="twitter:image" content="/images/webThumbnail.png" />
+    <meta
+      name="twitter:image"
+      content="https://bennynguyen.us/images/webThumbnail.png"
+    />
     <meta name="twitter:image:alt" content="Benny Nguyen" />
     <meta name="twitter:domain" content="bennynguyen.us" />
     <meta name="twitter:url" content="https://bennynguyen.us" />
