--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     
     <link rel="icon" type="image/svg+xml" href="/icon/webIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A Front-end developer who enjoys and wants to know more about programming."
+    />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="This is Benny Nguyen" />
     <meta
