Revert "feat: :mag:"
This reverts commit 655e0a222ede216a99513780c46721feebb3ca52.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       content="https://bennynguyen.us/images/webThumbnail.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@pdteggman" />
-    <meta name="twitter:creator" content="@pdteggman" />
+    <meta name="twitter:site" content="@piaw505" />
+    <meta name="twitter:creator" content="@piaw505" />
     <meta name="twitter:title" content="This is Benny Nguyen" />
     <meta
       name="twitter:description"
@@ -35,10 +35,6 @@
     <meta name="twitter:image:alt" content="Benny Nguyen" />
     <meta name="twitter:domain" content="bennynguyen.us" />
     <meta name="twitter:url" content="https://bennynguyen.us" />
-    <meta
-      name="keywords"
-      content="front-end development, web development, programming, html, css, javascript, user interface design, user experience, responsive design, code optimization, frameworks, react, version control, git, cross-browser compatibility, web performance, accessibility, responsive web design, portfolio, projects, learning resources, tech blog, software development, development tools, code quality, problem-solving, Benny, Nguyen, Benny Nguyen"
-    />
     <title>Benny Nguyen</title>
   </head>
   <body>
