--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/src/App.css" />
-    <link rel="icon" type="image/svg+xml" href="/icon/webIcon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon/webIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
