--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon/webIcon.svg" />
+    <link rel="icon" type="image/png" href="/icon/webIcon.png" />
     <title>Benny Nguyen</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
