refactor: :zap: better description

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A Front-end developer who enjoys and wants to know more about programming."
+      content="A high school student passionate about programming. I am confident in my ability to achieve great things in the future."
     />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="This is Benny Nguyen" />
     <meta
       property="og:description"
-      content="A Front-end developer who enjoys and wants to know more about programming."
+      content="A high school student passionate about programming. I am confident in my ability to achieve great things in the future."
     />
     <meta property="og:url" content="https://bennynguyen.us" />
     <meta
@@ -26,7 +26,7 @@
     <meta name="twitter:title" content="This is Benny Nguyen" />
     <meta
       name="twitter:description"
-      content="A Front-end developer who enjoys and wants to know more about programming."
+      content="A high school student passionate about programming. I am confident in my ability to achieve great things in the future."
     />
     <meta
       name="twitter:image"
