--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       property="og:description"
       content="A high school student passionate about programming. I am confident in my ability to achieve great things in the future."
     />
-    <meta property="og:url" content="https://bennynguyen.us" />
+    <meta property="og:url" content="https://bennynguyen.dev" />
     <meta
       property="og:image"
-      content="https://bennynguyen.us/images/webThumbnail.png"
+      content="https://bennynguyen.dev/images/webThumbnail.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@piaw505" />
@@ -30,11 +30,11 @@
     />
     <meta
       name="twitter:image"
-      content="https://bennynguyen.us/images/webThumbnail.png"
+      content="https://bennynguyen.dev/images/webThumbnail.png"
     />
     <meta name="twitter:image:alt" content="Benny Nguyen" />
-    <meta name="twitter:domain" content="bennynguyen.us" />
-    <meta name="twitter:url" content="https://bennynguyen.us" />
+    <meta name="twitter:domain" content="bennynguyen.dev" />
+    <meta name="twitter:url" content="https://bennynguyen.dev" />
     <title>Benny Nguyen</title>
   </head>
   <body>
