perf: :zap: follow google pagespeed improvements

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       content="https://bennynguyen.dev/images/webThumbnail.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@piaw505" />
-    <meta name="twitter:creator" content="@piaw505" />
+    <meta name="twitter:site" content="@pdteggman" />
+    <meta name="twitter:creator" content="@pdteggman" />
     <meta name="twitter:title" content="This is Benny Nguyen" />
     <meta
       name="twitter:description"
