docs: :fire: better thumbnail and my image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta property="og:url" content="https://bennynguyen.dev" />
     <meta
       property="og:image"
-      content="https://bennynguyen.dev/images/webThumbnail.png"
+      content="https://bennynguyen.dev/images/thumbnail.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@pdteggman" />
@@ -49,7 +49,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://bennynguyen.dev/images/webThumbnail.png"
+      content="https://bennynguyen.dev/images/thumbnail.png"
     />
     <meta name="twitter:image:alt" content="Benny Nguyen" />
     <meta name="twitter:domain" content="bennynguyen.dev" />
